Integration_Examples/Inbound_Mexichem/objects/IntegrationMap__c.object
<CustomObject>
    <description>[a09][IntegrationMap__c] Mapa de integração.</description>
    <fields>
        <fullName>CommandClassName__c</fullName>
        <defaultValue>&quot;GenericIntegrationService&quot;</defaultValue>
        <label>Classe de comando</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomOperationClassName__c</fullName>
        <label>Nome da classe da operação customizada</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLOperationTxt__c</fullName>
        <label>Operação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Upsert</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InfoTxt__c</fullName>
        <label>Informações</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <label>ID da integração</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OutputDataTypeTxt__c</fullName>
        <label>Tipo de dado de entrada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>JSON</fullName>
                    <default>true</default>
                    <label>JSON</label>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SObjectApiNameTxt__c</fullName>
        <label>API name do objeto</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mapa de integração</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IntegrationId__c</columns>
        <columns>SObjectApiNameTxt__c</columns>
        <columns>DMLOperationTxt__c</columns>
        <columns>CommandClassName__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Integração</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapas de integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>